--- a/styles_cv.css
+++ b/styles_cv.css
@@ -352,4 +352,10 @@ hr {
         font-size: 16px;
     }
 
+
+    /* === FOOTER === */
+    .social {
+        flex-direction: column;
+    }
+
 }
